changed compile errors